--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Locked At Level One</title>
+    <title>Locked At Level One - Privacy Policy</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -35,7 +35,7 @@
 <body>
 
 <div class="container">
-    <h1>Privacy Policy</h1>
+    <h1>Locked At Level One - Privacy Policy</h1>
     <p><strong>Effective Date</strong>: September 12, 2024</p>
 
     <p>At <strong>Elevore Earth Co.</strong>, we value your privacy and are committed to ensuring that any data related to our game, <strong>Locked At Level One</strong>, is handled with care. This Privacy Policy explains what data we collect, how it is used, and how you can request the deletion of any personal data.</p>
