--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         .hero {
             height: 100vh;
-            background-image: url('https://github.com/elevoreearthco/elevoreearthco.github.io/blob/main/Docs/Assets/images/lalo-animetrsp.png');
+            background-image: url('https://raw.githubusercontent.com/elevoreearthco/elevoreearthco.github.io/refs/heads/main/Docs/Assets/images/hero-1.png');
             background-size: cover;
             background-position: center;
             display: flex;
@@ -89,7 +89,7 @@
 <body>
     <!-- Hero Banner -->
     <section class="hero">
-        <h1>Locked At Level One</h1>
+        <h1> </h1>
     </section>
 
     <!-- Game Description Section -->
