--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <!-- Game Description Section -->
     <section class="content-section">
-        <h2>About the Game</h2>
+        <h2>Locked At Level One</h2>
         <p>
             Enter the mysterious world of <strong>Elevore Earth</strong> in the most immersive VR RPG experience ever created. 
             As Slayer, a level one playtester, you'll uncover dark secrets hidden within a world where NPCs have gone missing, and leveling up is impossible. 
