--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
     <!-- Navigation Bar -->
     <div class="navbar">
-        <a href="https://elevoreearthco.github.io/">Privacy Policy</a>
+        <a href="https://elevoreearthco.github.io/privacypolicy.html">Privacy Policy</a>
     </div>
 
     <!-- Hero Banner -->
@@ -177,7 +177,7 @@
     <section class="screenshot-section">
         <!-- Screenshot 1 -->
         <div class="screenshot-box">
-            <img src="path/to/screenshot1.png" alt="Screenshot 1">
+            <img src="https://github.com/elevoreearthco/elevoreearthco.github.io/blob/main/Docs/Assets/images/LALOscreenshots2a.png?raw=true" alt="Screenshot 1">
             <div class="screenshot-description">
                 <h3>Explore Unique Worlds</h3>
                 <p>Experience beautiful, interactive environments in Elevore Earth, each with its own unique atmosphere and hidden secrets to discover.</p>
@@ -186,7 +186,7 @@
 
         <!-- Screenshot 2 -->
         <div class="screenshot-box">
-            <img src="path/to/screenshot2.png" alt="Screenshot 2">
+            <img src="https://github.com/elevoreearthco/elevoreearthco.github.io/blob/main/Docs/Assets/images/LALOscreenshots3a.png?raw=true" alt="Screenshot 2">
             <div class="screenshot-description">
                 <h3>Engage in Intense Combat</h3>
                 <p>Battle enemies in fast-paced, immersive combat as you journey through the world, using weapons and tactics to gain the upper hand.</p>
@@ -195,7 +195,7 @@
 
         <!-- Screenshot 3 -->
         <div class="screenshot-box">
-            <img src="path/to/screenshot3.png" alt="Screenshot 3">
+            <img src="https://github.com/elevoreearthco/elevoreearthco.github.io/blob/main/Docs/Assets/images/LALOscreenshots4a.png?raw=true" alt="Screenshot 3">
             <div class="screenshot-description">
                 <h3>Uncover Hidden Secrets</h3>
                 <p>Unravel the mysteries behind the missing NPCs and discover the dark truth that lies beneath the surface of the game world.</p>
@@ -204,7 +204,7 @@
 
         <!-- Screenshot 4 -->
         <div class="screenshot-box">
-            <img src="path/to/screenshot4.png" alt="Screenshot 4">
+            <img src="https://github.com/elevoreearthco/elevoreearthco.github.io/blob/main/Docs/Assets/images/LALOscreenshots5a.png?raw=true" alt="Screenshot 4">
             <div class="screenshot-description">
                 <h3>Fully Interactive Environment</h3>
                 <p>Almost every object in the environment is interactable, allowing you to shape your experience and interact with the world in new ways.</p>
