--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
             color: #333;
         }
 
-        /* Hero Image Styling */
+        /* Hero Image Styling with Parallax Effect */
         .hero {
             height: 100vh;
             background-image: url('https://raw.githubusercontent.com/elevoreearthco/elevoreearthco.github.io/refs/heads/main/Docs/Assets/images/hero-1.png');
             background-size: cover;
             background-position: center;
+            background-attachment: fixed; /* Parallax effect */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -155,12 +156,13 @@
 
     <!-- Navigation Bar -->
     <div class="navbar">
+        <a href="mailto:john.phillip.hernandez@gmail.com">Contact Us</a>
         <a href="https://elevoreearthco.github.io/privacypolicy.html">Privacy Policy</a>
     </div>
 
-    <!-- Hero Banner -->
+    <!-- Hero Banner with Parallax Effect -->
     <section class="hero">
-        <h1>Locked At Level One</h1>
+        <h1> </h1>
     </section>
 
     <!-- Game Description Section -->
@@ -226,5 +228,6 @@
     <footer>
         <p>&copy; 2024 Locked At Level One | All Rights Reserved</p>
     </footer>
+
 </body>
 </html>
